<resources>
    <string name="app_name">Practica1</string>
    <string name="btnAgregar">Agregar Contacto</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtEmail">Email</string>
    <string name="txtTwitter">Twitter</string>
    <string name="txtTel">Telefono</string>
    <string name="txtNacimiento">Fecha de Nacimiento</string>
    <string name="btnGuardar">Guardar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
